Address code review feedback
- Add proper imports to ProducerController (Collectors, Role)
- Use immutable views in InstanceRegistry (toList(), Map.copyOf())
- Add logger.warn for instance registry initialization failures
- Clean up fully-qualified class names in handleStartSimulation

Co-authored-by: imperfectperson-max <125220547+imperfectperson-max@users.noreply.github.com>